name:                xgboost-haskell
version:             0.1.0.0
synopsis:            XGBoost library for Haskell.
description:         XGBoost library for Haskell via FFI binding, on top of foundation.
homepage:            https://github.com/sighingnow/xgboost-haskell#readme
author:              Tao He
maintainer:          sighingnow@gmail.com
license:             MIT
license-file:        LICENSE
copyright:           Copyright: (c) 2017 Tao He
category:            Development
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

Library
  hs-source-dirs:      src
  exposed-modules:
    ML.DMLC.XGBoost
    ML.DMLC.XGBoost.Exception
    ML.DMLC.XGBoost.FFI
    ML.DMLC.XGBoost.Rabit.FFI
  other-modules:
    ML.DMLC.XGBoost.Foreign
  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude
                     , OverloadedStrings
  build-depends:       base >= 4.7 && < 5
                     , foundation
  -- Linking approach: http://www.the-efficient-programmer.com/programming/link-c-lib-in-haskell.html#linking-to-the-c-library
  extra-lib-dirs: /root/workspace/xgboost/lib
  extra-include-dirs: /root/workspace/xgboost/include
  -- See: https://stackoverflow.com/a/37643200
  extra-libraries: xgboost, stdc++, libomp

executable xgboost-app
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude
                     , OverloadedStrings
  build-depends:       base >= 4.7 && < 5
                     , foundation
                     , xgboost-haskell
  buildable: False
  extra-libraries:     xgboost
  extra-lib-dirs:      ./

executable xgb-agaricus
  hs-source-dirs:      examples
  main-is:             agaricus.hs
  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude
                     , OverloadedStrings
  build-depends:       base >= 4.7 && < 5
                     , foundation
                     , xgboost-haskell
  extra-libraries:     xgboost
  extra-lib-dirs:      ./
